# dokumetry-python

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml  test-pypi-publish.yml  tests.yml
ISSUE_TEMPLATE/: bug.md
src/: requirements.txt
src/dokumetry/: __helpers.py  __init__.py  anthropic.py  async_anthropic.py  async_azure_openai.py  async_mistral.py  async_openai.py  azure_openai.py  cohere.py  mistral.py  openai.py
tests/: requirements.txt  test_anthropic.py  test_cohere.py  test_mistral.py  test_mistral.py.hold  test_openai.py
