[tool.poetry]
name = "dokumetry"
version = "0.1.0"
description = "A Python library for tracking LLM and GenAI usage and sending the usage data to Doku"
authors = ["Doku Labs"]
repository = "https://github.com/dokulabs/dokumetry-python"
readme = "README.md"
homepage = "https://github.com/dokulabs/dokumetry-python"
keywords = ["openai", "anthropic", "claude", "cohere", "llm monitoring", "observability", "monitoring", "gpt", "Generative AI", "chatGPT"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
openai = "^1.13.0"
anthropic = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
